--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --port 4200",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -12,12 +12,12 @@
   "dependencies": {
     "@nuxt/content": "^2.12.1",
     "@nuxt/ui-pro": "^1.0.2",
-    "@nuxtjs/tailwindcss": "^6.11.4",
     "nuxt": "^3.11.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.11.4",
     "nuxt-icon": "^0.6.10"
   }
 }
